--- a/hacktues/main/templates/main/index.html
+++ b/hacktues/main/templates/main/index.html
@@ -1,3 +1,8 @@
-{% extends 'base.html' %}
-{% block content %}
-{% endblock content %}
+<!doctype html>
+<html>
+    <head></head>
+    <body>
+        <div><a href="volunteer_page">VOLUNTEER</a></div>
+        <div><a href="user_page">USER</a></div>
+    </body>
+</html>
