--- a/hacktues/main/templates/main/index.html
+++ b/hacktues/main/templates/main/index.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html>
-    <head></head>
+    <head>
+        {% load static %}
+        <link rel="stylesheet" href="{% static 'main\css\style.css' %}">
+    </head>
     <body>
         <div><a href="volunteer_page">VOLUNTEER</a></div>
         <div><a href="user_page">USER</a></div>
