--- a/hacktues/main/templates/main/volunteer_page.html
+++ b/hacktues/main/templates/main/volunteer_page.html
@@ -1,7 +1,4 @@
-<!doctype html>
-<html>
-    <head></head>
-    <body>
-        <div>Volunteer page</div>
-    </body>
-</html>
+{% extends 'base.html'%}
+{% block content %}
+    <div>Volunteer page</div>
+{% endblock content%}
