--- a/hacktues/main/static/main/css/style.css
+++ b/hacktues/main/static/main/css/style.css
@@ -5,7 +5,8 @@ body {
     display: inline;
     text-decoration: none;
     background-color: #00a896;
-    padding: 22%;;
+    padding: 22%;
+}
 div {
     text-align: center;
 }
