Return badly moves base.html

--- a/hacktues/main/static/main/css/style.css
+++ b/hacktues/main/static/main/css/style.css
@@ -1,11 +1,6 @@
 body {
     background-color: #02c39a;
-}
-.homepageA {
-    display: inline;
-    text-decoration: none;
-    background-color: #00a896;
-    padding: 22%;
+    color: white;
 }
 div {
     text-align: center;
