--- a/hacktues/main/static/main/css/style.css
+++ b/hacktues/main/static/main/css/style.css
@@ -1,17 +1,31 @@
 body {
     background-color: #02c39a;
     color: white;
+    font-size:18px;
+    z-index: -1;
 }
 label {
     color: white;
+    font-size: 18px;
 }
-а {
+a:hover {
+    background-color: black;
+}
+а:link, a:visited {
     text-decoration: none;
+    background-color:#00a896;
+    padding: 50px;
+}
+div.homepageOpt {
+    margin: 1%;
 }
 div.container {
-    padding: 5%;
+    padding: 3% 2%;
 }
 input[type=submit] {
     background-color: #028090;
     color: white;
+}
+input[type=text] {
+    background-color: #028090;
 }
