--- a/hacktues/main/templates/main/index.html
+++ b/hacktues/main/templates/main/index.html
@@ -1,6 +1,41 @@
 {% extends 'base.html' %}
 {% block content %}
-    <div class="container">
+    <style>
+        div{
+            height: 100%;
+            width: 50%;
+            color: black;
+            display: flex;
+            position: fixed;
+            align-items: center;
+            justify-content: center;
+        }
+       
+        div:hover{
+            background-color: #1d578a;
+            color: white;
+        }
+        #vol{
+            top: 0;
+            left: 0;
+        }
+        #cl{
+            top: 0;
+            left: 50%;
+        }
+    </style>
+
+    <a href="{% url 'main-volunteer_page'%}">
+        <div id="vol">
+            <h1>Доброволец</h1>
+        </div>
+    </a>
+    <a href="{% url 'main-user_page'%}">
+        <div id="cl">
+            <h1>Участник</h1>
+        </div>
+    </a>
+    <!--<div class="container">
         <div class="homepageOpt">
             <a class="homepageA" href="{% url 'main-volunteer_page'%}">ДОБРОВОЛЕЦ</a>
         </div>
@@ -11,5 +46,6 @@
                 <input type="submit" value='Включи се'>
             </form>
         </div>
-    </div>
+    </div> -->
+
 {%endblock content%}
