--- a/hacktues/templates/base.html
+++ b/hacktues/templates/base.html
@@ -3,11 +3,11 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="{% static 'main/css/style.css' %}">
-    <link rel="stylesheet" href='{%static "main/css/kalo_style.css" %}'>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="{% static 'main/css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'main/css/kalo_style.css' %}">
 </head>
 
 <body>
