--- a/hacktues/main/templates/main/volunteer_profile.html
+++ b/hacktues/main/templates/main/volunteer_profile.html
@@ -1,18 +1,17 @@
 {% extends 'base.html' %}
 {% block content%}
     <div class="container">
-        <nav>
-            <ul>
+            <ul class="nav">
                 <li><a href="#">Направи организация на своята сграда</a></li>
-                <li><a href="{% url 'main-create_event'%}">Създай ново събитие</a></li>
+                <!--<li><a href="{% url 'main-create_event'%}">Създай ново събитие</a></li>-->
             </ul>
-        </nav>
         <div class="row">
             <div class="col s8 centered cyan darken-3">
-                Тук отиват всички заявки
+                Тук отиват името ти, (снимка?)
+                и лична информация
             </div>
             <div class="col s4 centered">
-                Тук отиват всички събития
+                Тук отиват всичките ти стаи
             </div>
         </div>
     </div>
