--- a/hacktues/templates/base.html
+++ b/hacktues/templates/base.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <image id="logo" src="{%static 'main/logo2_2.png'%}">
     {% block content %}
     {% endblock content %}
     {% block scripts %}
