--- a/hacktues/main/templates/main/index.html
+++ b/hacktues/main/templates/main/index.html
@@ -2,12 +2,12 @@
 {% block content %}
     <div class="container">
         <div class="homepageOpt">
-            <a class="homepageA" href="{% url 'main-volunteer_page'%}">ДОБРОВОЛЕЦ</a>
+            <a class="homepageA centered" href="{% url 'main-volunteer_page'%}">ДОБРОВОЛЕЦ</a>
         </div>
         </br>
         <div class="homepageOpt">
             <form>
-                <label for="buildingCode">УЧАСТНИК</label></br>
+                <label for="buildingCode"><a>УЧАСТНИК</a></label></br>
                 <input type="text" id='buildingCode'></br>
                 <input type="submit" value='Включи се'>
             </form>
