--- a/hacktues/main/templates/main/volunteer_page.html
+++ b/hacktues/main/templates/main/volunteer_page.html
@@ -4,11 +4,12 @@
         <div>
             Login
             <form>
-                <label for="volName">Име</label>
-                <input type="text" id="volName">
-                <label for="volPass">Парола</label>
+                <label for="volName">Име:</label>
+                <input type="text" id="volName"></br>
+                <label for="volPass">Парола:</label>
                 <input type="password" id="volPass">
-                <input type="submit" value="Влез">
+                <input type="submit" value="Влез!">
+                <input type="button" value="Регистрирай се!">
             </form>
         </div>
     </div>
