--- a/hacktues/templates/base.html
+++ b/hacktues/templates/base.html
@@ -11,7 +11,9 @@
 </head>
 
 <body>
-    <image id="logo" src="{%static 'main/logo2_2.png'%}">
+    <header>
+        <image width="12%" height="6%" id="logo" src="{%static 'main/logo2_2.png'%}"></image>
+    </header>
     {% block content %}
     {% endblock content %}
     {% block scripts %}
