--- a/hacktues/main/static/main/css/kalo_style.css
+++ b/hacktues/main/static/main/css/kalo_style.css
@@ -5,6 +5,9 @@ body {
 	font-size: 20px;
 	color: white; /*#05668d;*/
 }
+header {
+	background-color:#05668d;
+}
 #logo {
     padding: 0% 1% 0% 1%;
 }
@@ -78,7 +81,7 @@ div.container {
     width:70%;
     background-color: #00d6c1;
 	margin: 0% 15%;
-	padding: 2% 5%;
+	padding: 2% 5% 40% 5%;
 	box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.2);
 
 }
