--- a/hacktues/templates/base.html
+++ b/hacktues/templates/base.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="pink darken-3 z-depth-1">
         <image width="12%" height="6%" id="logo" src="{%static 'main/logo2_2.png'%}"></image>
     </header>
     {% block content %}
