--- a/hacktues/main/static/main/css/kalo_style.css
+++ b/hacktues/main/static/main/css/kalo_style.css
@@ -1,17 +1,17 @@
-body {
+/*body {
 	margin: auto;
 	background-color: #02c39a;
 	font-family: "Poppins", sans-serif;
 	font-size: 20px;
 	color: white; /*#05668d;*/
-}
-header {
+/*}
+/*header {
 	background-color:#05668d;
-}
-#logo {
+}*/
+/*#logo {
     padding: 0% 1% 0% 1%;
 }
-div{
+/*div{
 	display: block;
 }
 div.d1 {
@@ -78,7 +78,7 @@ div.headlogo {
 }
 div.container {
     position: fixed;
-    width:70%;
+	width:70%;
     background-color: #00d6c1;
 	margin: 0% 15%;
 	padding: 2% 5% 40% 5%;
