--- a/hacktues/main/static/main/css/blok_page.css
+++ b/hacktues/main/static/main/css/blok_page.css
@@ -7,12 +7,24 @@ body{
 	right: 0;
 	width: 100%;
 	height: 15%;
+
 }
 
-#left_menu{
+#left_menu, div.side_nav, .img_nav{
 	position: fixed;
 	top:15%;
 	left: 0;
 	width: 15%;
 	height: 85%;
+	padding: 0px;
+}
+
+.txt_nav{
+	position: absolute;
+	top:15%;
+	left: 5%;
+	width: 10%;
+	height: 85%;
+	margin-right: 5%;
+	float: right;
 }
