--- a/hacktues/main/templates/main/create_group.html
+++ b/hacktues/main/templates/main/create_group.html
@@ -12,4 +12,7 @@
             </form>
         </div>
     </div>
+    <script>
+        console.log(Math.floor(Math.random() * 100000))
+    </script>
 {% endblock content %}
