Add login and register form for volunteer

--- a/hacktues/main/templates/main/DEPRECATEDvolunteer_login.html
+++ b/hacktues/main/templates/main/DEPRECATEDvolunteer_login.html
@@ -8,7 +8,7 @@
                 <label for="volPass">Парола:</label>
                 <input type="password" id="volPass">
                 <input type="submit" value="Влез!">
-                <input type="button" value="Регистрирай се!">
+                <a href="{% url 'register'%}">Регистрирай се!</a>
             </form>
         </div>
     </div>
