--- a/hacktues/main/templates/main/index.html
+++ b/hacktues/main/templates/main/index.html
@@ -2,7 +2,7 @@
 {% block content %}
     <div class="row">
         <div class="col s6 light-blue darken-2 z-depth-5 fullPage valign-wrapper center-align">
-            <a class="white-text center-align" href="{% url 'main-volunteer_login'%}"><h1>ДОБРОВОЛЕЦ</h1></a>
+            <a class="white-text center-align" href="{% url 'login'%}"><h1>ДОБРОВОЛЕЦ</h1></a>
         </div>
         <div class="col s6 light-blue darken-1 valign-wrapper center-align fullPage">
             <form>
