Add working form hrefs

--- a/hacktues/users/templates/account/password_reset.html
+++ b/hacktues/users/templates/account/password_reset.html
@@ -7,18 +7,18 @@
 
 {% block content %}
 
-    <h1>{% trans "Password Reset" %}</h1>
+    <h3>{% trans "Възстановяване на паролата" %}</h3>
     {% if user.is_authenticated %}
     {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
 
-    <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
+    <p>{% trans "Забравили сте паролата си? Попълнете имейл адреса си долу и ще Ви изпратим имейл, за да я промените." %}</p>
 
     <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
         {% csrf_token %}
         {{ form.as_p }}
-        <input type="submit" value="{% trans 'Reset My Password' %}" />
+        <input type="submit" value="{% trans 'Възстанови паролата ми' %}" />
     </form>
 
-    <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+    <p>{% blocktrans %}Моля свържете се с нас ако имате проблеми с възстановяването на паролата!{% endblocktrans %}</p>
 {% endblock %}
