--- a/hacktues/users/templates/account/signup.html
+++ b/hacktues/users/templates/account/signup.html
@@ -15,6 +15,8 @@
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
+  <label for="name">Име:</label>
+  <input id="name" type="text">
   <button type="submit">{% trans "Sign Up" %} &raquo;</button>
 </form>
 
