--- a/hacktues/main/templates/main/index.html
+++ b/hacktues/main/templates/main/index.html
@@ -1,16 +1,15 @@
-{% extends 'base.html' %}
-{% block content %}
-    <div class="container">
-        <div class="homepageOpt">
-            <a class="homepageA" href="{% url 'main-volunteer_page'%}">ДОБРОВОЛЕЦ</a>
-        </div>
-        </br>
-        <div class="homepageOpt">
-            <form>
-                <label for="buildingCode">УЧАСТНИК</label></br>
-                <input type="text" id='buildingCode'></br>
-                <input type="submit" value='Включи се'>
-            </form>
-        </div>
+{% extends 'base.html' %} {% block content %}
+<div class="container">
+    <div class="homepageOpt">
+        <a class="homepageA" href="{% url 'main-volunteer_page'%}">ДОБРОВОЛЕЦ</a>
     </div>
+    </br>
+    <div class="homepageOpt">
+        <form>
+            <label for="buildingCode">УЧАСТНИК</label></br>
+            <input type="text" id='buildingCode'></br>
+            <input type="submit" value='Включи се'>
+        </form>
+    </div>
+</div>
 {%endblock content%}
