--- a/hacktues/main/templates/main/room_volunteer.html
+++ b/hacktues/main/templates/main/room_volunteer.html
@@ -3,18 +3,22 @@
 	<div class="container">
 		<div class="row">
 			<div class="col s8 light-blue darken-2 z-depth-5 fullPage valign-wrapper center-align">
+				<h3 class="white-text">Събития:</h3>
 				{%for event in events%}
 				<div class="row">
-					<div class="col s12 m6">
-					  <div class="card teal lighten-5">
-						<div class="card-content blue-text">
+					<div class="col s12 m8">
+					  <div class="card small teal lighten-5">
+						<div class="card-content">
 						  <span class="card-title">{{ event.title}}</span>
-							<p>
+							<p class="grey-text">
+								{{event.date_posted}}
+							</p>
+							<p class="blue-text">
 								{{event.content}}
 							</p>
 						</div>
 						<div class="card-action">
-						  <a href="#">Виж списък</a>
+						  <a class="grey-text" href="#">Виж списък</a>
 						</div>
 					  </div>
 					</div>
@@ -22,7 +26,12 @@
 				{%endfor%}
 			</div>
 			<div class="col s4 light-blue darken-1 valign-wrapper center-align fullPage"">
-
+				<h3 class="white-text">Участници:</h3>
+				{%for user in users %}
+					<ul class="collection">
+						<li class="collection-item teal lighten-5">{{user}}</li>
+				 	</ul>
+				{%endfor%}
 			</div>
 		</div>
 	</div>
