--- a/hacktues/users/templates/account/login.html
+++ b/hacktues/users/templates/account/login.html
@@ -1,37 +1,7 @@
 {% extends "account/base.html" %}
-
-{% load i18n %}
-{% load account socialaccount %}
-
-{% block head_title %}{% trans "Sign In" %}{% endblock %}
-
 {% block content %}
 
-<h3>{% trans "Влезте" %}</h3>
-
-{% get_providers as socialaccount_providers %}
-
-{% if socialaccount_providers %}
-<p>{% blocktrans with site.name as site_name %}Please sign in with one
-  of your existing third party accounts. Or, <a href="{{% url 'register' %}}">регистрирай</a>
-  for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
-
-<div class="socialaccount_ballot">
-
-  <ul class="socialaccount_providers">
-    {% include "socialaccount/snippets/provider_list.html" with process="login" %}
-  </ul>
-
-  <div class="login-or">{% trans 'or' %}</div>
-
-</div>
-
-{% include "socialaccount/snippets/login_extra.html" %}
-
-{% else %}
-<p>{% blocktrans %}Ако нямате направена регистрация се регитрирайте
-  <a href="{{% url 'register' %}}">тук</a>.{% endblocktrans %}</p>
-{% endif %}
+<h3>Влезте</h3>
 
 <form class="login" method="POST" action="{% url 'account_login' %}">
   {% csrf_token %}
@@ -39,8 +9,8 @@
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
-  <a class="button secondaryAction" href="{% url 'password_reset' %}">{% trans "Забравили сте паролата си?" %}</a>
-  <button class="primaryAction" type="submit">{% trans "Влез" %}</button>
+  <a class="button secondaryAction" href="{% url 'account_reset_password' %}">Забраена парола</a>
+  <button class="primaryAction" type="submit">Влез</button>
 </form>
 
 {% endblock %}
