--- a/hacktues/users/templates/account/signup.html
+++ b/hacktues/users/templates/account/signup.html
@@ -5,18 +5,16 @@
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
 {% block content %}
-<h1>{% trans "Регистрация" %}</h1>
+<h1>{% trans "Sign Up" %}</h1>
 
-<p>{% blocktrans %}Вече имате регистрация? Тогава можете да <a href="{{ login_url }}">влезете</a>.{% endblocktrans %}</p>
+<p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
 
-<form class="signup" id="signup_form" method="post" action="{% url 'account_user_signup' %}">
+<form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
   {% csrf_token %}
   {{ form.as_p }}
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
-  <label for="name">Име:</label>
-  <input id="name" type="text">
   <button type="submit">{% trans "Sign Up" %} &raquo;</button>
 </form>
 
