--- a/hacktues/users/templates/account/login.html
+++ b/hacktues/users/templates/account/login.html
@@ -15,14 +15,11 @@
 <div class="col s6 left-align">
 <div class="container" id="container">
     
-<h4>{% trans "Вход" %}</h4>
+<h4>Вход</h4>
 
 <form class="login" method="POST" action="{% url 'account_login' %}">
-  {% csrf_token %}
-  {{ form.as_p }}
-  {% if redirect_field_value %}
+
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-  {% endif %}
   <div class="section">    
     <label for="email"><h6>Имейл</h6></label>
     <input type="text" id="email">
@@ -30,33 +27,12 @@
     <input type="text" id="pw">
 
   </div>
-  <button id="login_button" class="primaryAction teal lighten-5 z-depth-2" type="submit"><h5>{% trans "Влез" %}</h5></button>
-  <a class="button secondaryAction" href="{% url 'password_reset' %}">{% trans "Забравили сте паролата си?" %}</a>
+  <button id="login_button" class="primaryAction teal lighten-5 z-depth-2" type="submit"><h5>Влез</h5></button>
+  
 </form>
 
-{% get_providers as socialaccount_providers %}
-
-{% if socialaccount_providers %}
-<p>{% blocktrans with site.name as site_name %}Please sign in with one
-  of your existing third party accounts. Or, <a href="{{% url 'account_signup' %}}">регистрирай</a>
-  for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
-
-<div class="divider"></div>
-<div class="socialaccount_ballot">
-
-  <ul class="socialaccount_providers">
-    {% include "socialaccount/snippets/provider_list.html" with process="login" %}
-  </ul>
-
-  <div class="login-or">{% trans 'or' %}</div>
-
-</div>
-
-{% include "socialaccount/snippets/login_extra.html" %}
-
-{% else %}
-<p>{% blocktrans %}Ако нямате направена регистрация, може да се регистрирате
-  <a href="{{% url 'register' %}}">тук</a>.{% endblocktrans %}</p>
-{% endif %}
+<a class="button secondaryAction" href="{% url 'password_reset' %}">Забравена парола</a>
+<p>Ако нямате направена регистрация, може да се регистрирате
+  <a href="{% url 'register' %}">тук</a>.</p>
 
 {% endblock %}
