--- a/hacktues/users/templates/account/user_signup.html
+++ b/hacktues/users/templates/account/user_signup.html
@@ -18,9 +18,9 @@
       <label class="white-text left ">Име</label>
       <input name="name" class="blue lighten-2">
       <label class="white-text left">Парола</label>
-      <input name="password" class="blue lighten-2">
+      <input type="password" name="password" class="blue lighten-2">
       <label class="white-text left">Повтори парола</label>
-      <input name="password" class="blue lighten-2">
+      <input type="password" name="password" class="blue lighten-2">
     </div>
   </div>
   <div class="row">
