--- a/hacktues/main/templates/main/index.html
+++ b/hacktues/main/templates/main/index.html
@@ -1,44 +1,18 @@
-{% extends 'base.html' %}
-{% block content %}
+{% extends 'base.html' %} {% block content %}
 <div class="row">
     <div class="col s8 light-blue darken-2 z-depth-5 fullPage valign-wrapper center-align">
         <a class="white-text center-align" href="{% url 'account_signup'%}">
             <h1>ВКЛЮЧИ СЕ СЕГА!</h1>
         </a>
     </div>
-<<<<<<< HEAD
-    <div class="col s6 light-blue darken-1 valign-wrapper center-align fullPage">
-        <form method="POST">
-            {% csrf_token %}
-            <label for="buildingCode"><a class="white-text">
-                    <h1>УЧАСТНИК</h1>
-                </a></label></br>
-            <input type="text" id='buildingCode'></br>
-            <input class="waves-effect waves-light btn-large teal lighten-5" type="submit" value='Включи се'>
-        </form>
-    </div>
-</div>
-<div class="col s6 light-blue darken-1 valign-wrapper center-align fullPage">
-    <form method="POST">
-        {% csrf_token %}
-        <label for="buildingCode"><a class="white-text">
-                <h1>УЧАСТНИК</h1>
-            </a></label></br>
-        <input type="text" id='buildingCode'></br>
-        <button class="waves-effect waves-light btn-large" type="submit" value='Включи се'>
-    </form>
-</div>
-</div>
-=======
     <div class="col s4 light-blue darken-1 valign-wrapper center-align fullPage">
         <ul class="collection blue-text">
             <span class="white-text">Защо да се регистрирате при нас?</span>>
             <li class="collection-item">Помогнете за справянето с covid кризата.</li>
             <li class="collection-item">Помогнете на съседите си</li>
             <li class="collection-item">Получете помощ от ваш съсед</li>
-          </ul>
+        </ul>
     </div>
 </div>
->>>>>>> 3b4cfc08dc8e431e7c0325c9f89e166a3c732bbe
 
 {%endblock content%}
