--- a/hacktues/main/templates/main/volunteer_profile.html
+++ b/hacktues/main/templates/main/volunteer_profile.html
@@ -1,16 +1,12 @@
 {% extends 'base.html' %}
 {% block content%}
     <div class="container">
-            <ul class="nav">
-                <li><a href="#">Направи организация на своята сграда</a></li>
-                <!--<li><a href="{% url 'main-create_event'%}">Създай ново събитие</a></li>-->
-            </ul>
         <div class="row">
-            <div class="col s8 centered cyan darken-3">
+            <div class="col s8 centered cyan darken-3 fullPage">
                 Тук отиват името ти, (снимка?)
                 и лична информация
             </div>
-            <div class="col s4 centered">
+            <div class="col s4 centered fullPage">
                 Тук отиват всичките ти стаи
             </div>
         </div>
