--- a/hacktues/users/templates/account/login.html
+++ b/hacktues/users/templates/account/login.html
@@ -13,11 +13,12 @@
         {% endif %}
         <h4 class="left">Вход</h4>
         <div class="section">     
-          <br><br><br>
+          <!--<br><br><br>
           <label class="white-text left" for="email"><h6>Електронна поща</h6></label>
           <input type="text" id="email"></br>
           <label class="white-text left" for="pw"><h6>Парола</h6></label>
-          <input type="text" id="pw">
+          <input type="password" id="pw">-->
+          {{ form.as_p }}
           <button class="btn black-text primaryAction teal lighten-5 z-depth-2" style="float: right;"type="submit">Влез</button>
         </div>
       
