--- a/hacktues/users/templates/account/signup.html
+++ b/hacktues/users/templates/account/signup.html
@@ -14,16 +14,18 @@
       <h1 class="">{% trans "Регистрация" %}</h1>
       <p>{% blocktrans %}Вече имате регистрация? Тогава можете да <a href="{{ login_url }}" class="black-text">влезете</a>.{% endblocktrans %}</p>
       
-      {{ form.as_p }}
-
-      <!--<label class="white-text left">Електронна поща</label>
-      <input name="password" class="blue lighten-2">
-      <label class="white-text left ">Име</label>
-      <input name="name" class="blue lighten-2">
-      <label class="white-text left">Парола</label>
-      <input type="password" name="password" class="blue lighten-2">
-      <label class="white-text left">Повтори парола</label>
-      <input type="password" name="password" class="blue lighten-2">-->
+      <!--{{ form.as_p }}-->
+      {{form.errors}}
+      <label class="white-text left">Електронна поща:</label>
+      <input type="email" name="email" class="blue lighten-2">
+      <label class="white-text left ">Име:</label>
+      <input type="text" name="first_name" class="blue lighten-2">
+      <label class="white-text left ">Фамилия:</label>
+      <input type="text" name="last_name" class="blue lighten-2">
+      <label class="white-text left">Парола:</label>
+      <input type="password" name="password1" class="blue lighten-2">
+      <label class="white-text left">Повтори парола:</label>
+      <input type="password" name="password2" class="blue lighten-2">
     </div>
   </div>
   <div class="row">
