Add dummy data to User profile

--- a/hacktues/main/templates/main/volunteer_profile.html
+++ b/hacktues/main/templates/main/volunteer_profile.html
@@ -2,12 +2,25 @@
 {% block content%}
     <div class="container">
         <div class="row">
-            <div class="col s8 centered cyan darken-3 fullPage">
-                Тук отиват името ти, (снимка?)
-                и лична информация
+            <div class="col s8 centered light-blue darken-2 fullPage">
+                <h3 class="white-text">Лични данни:</h3></br>
+                <div class="card teal lighten-5">
+                    <div class="card-content blue-text">
+                        <p class="left">Име: {{user.first_name}}</p></br>
+                        <p class="left">Фамилия: {{user.last_name}}</p>
+                    </div>
+                </div>
             </div>
-            <div class="col s4 centered fullPage">
-                Тук отиват всичките ти стаи
+            <div class="col s4 centered light-blue darken-1 fullPage">
+                <a href="{% url 'main-create-room'%}" class="waves-effect waves-light btn-large teal lighten-5 blue-text">Добави Сграда</a>
+                <h3 class="white-text">Сгради:<h3>
+                {%for room in user.rooms%}
+                    <div class="card teal lighten-5">
+                        <div class="card-content blue-text">
+                            <a href="{% url 'main-room_volunteer'%}"><h4>{{room.name}}</h4></a>
+                        </div>
+                    </div>
+                {%endfor%}
             </div>
         </div>
     </div>
