--- a/hacktues/templates/base.html
+++ b/hacktues/templates/base.html
@@ -11,9 +11,27 @@
 </head>
 
 <body>
-    <header class="teal lighten-5 z-depth-2">
+    <!--<header class="teal lighten-5 z-depth-2">
         <a href="{% url 'main-index' %}"><image width="12%" height="6%" id="logo" src="{%static 'main/logo.png'%}"></image></a>
-    </header>
+        <ul>
+            <li><a>Вход</a></li>
+            <li><a>Изход</a></li>
+        </ul>
+    </header>-->
+    <nav class="teal lighten-5 z-depth-2">
+        <div class="nav-wrapper">
+          <a href="{% url 'main-index'%}" class="brand-logo"><image src="{%static 'main/logo.png'%}"></image>></a>
+          <ul id="nav-mobile" class="right hide-on-med-and-down">
+            {% if request.user.is_authenticated %}
+                <li><a class="blue-text" href="{% url 'account_logout'%}">Излез</a></li>
+                <li><a class="blue-text" href="{% url 'main-volunteer_profile'%}">Профил</a></li>
+            {% else %}
+                <li><a class="blue-text" href="{% url 'account_login'%}">Влез</a></li>
+                <li><a class="blue-text" href="{% url 'account_signup'%}">Регистрирай се</a></li>
+            {% endif %}
+          </ul>
+        </div>
+     </nav>
     {% block content %}
     {% endblock content %}
     {% block scripts %}
