--- a/hacktues/main/templates/main/index.html
+++ b/hacktues/main/templates/main/index.html
@@ -1,17 +1,20 @@
-{% extends 'base.html' %} {% block content %}
-<div class="row">
-    <div class="col s8 light-blue darken-2 z-depth-5 fullPage valign-wrapper center-align">
-        <a class="white-text center-align" href="{% url 'account_signup'%}">
-            <h1>ВКЛЮЧИ СЕ СЕГА!</h1>
-        </a>
-    </div>
-    <div class="col s4 light-blue darken-1 valign-wrapper center-align fullPage">
-        <ul class="collection blue-text">
-            <span class="white-text">Защо да се регистрирате при нас?</span>>
-            <li class="collection-item">Помогнете за справянето с covid кризата.</li>
-            <li class="collection-item">Помогнете на съседите си</li>
-            <li class="collection-item">Получете помощ от ваш съсед</li>
-        </ul>
+{% extends 'base.html' %}
+{% block content %}
+<div class="container">
+    <div class="row">
+        <div class="col s8 light-blue darken-2 z-depth-5 fullPage valign-wrapper center-align">
+            <a class="white-text center-align" href="{% url 'account_signup'%}">
+                <h1>ВКЛЮЧИ СЕ СЕГА!</h1>
+            </a>
+        </div>
+        <div class="col s4 light-blue darken-1 valign-wrapper center-align fullPage">
+            <ul class="collection blue-text">
+                <span class="white-text">Защо да се регистрирате при нас?</span>>
+                <li class="collection-item">Помогнете за справянето с covid кризата.</li>
+                <li class="collection-item">Помогнете на съседите си</li>
+                <li class="collection-item">Получете помощ от ваш съсед</li>
+            </ul>
+        </div>
     </div>
 </div>
 
