--- a/hacktues/users/templates/account/login.html
+++ b/hacktues/users/templates/account/login.html
@@ -17,7 +17,7 @@
           <label class="white-text left" for="email"><h6>Електронна поща</h6></label>
           <input type="text" id="email"></br>
           <label class="white-text left" for="pw"><h6>Парола</h6></label>
-          <input type="text" id="pw">
+          <input type="password" id="pw">
           <button class="btn black-text primaryAction teal lighten-5 z-depth-2" style="float: right;"type="submit">Влез</button>
         </div>
       
