Add event detail view + dummy data

--- a/hacktues/main/templates/main/room_volunteer.html
+++ b/hacktues/main/templates/main/room_volunteer.html
@@ -18,7 +18,7 @@
 							</p>
 						</div>
 						<div class="card-action">
-						  <a class="grey-text" href="#">Виж списък</a>
+						  <a class="grey-text" href="{%url 'main-event_detail'%}">Виж отблизо</a>
 						</div>
 					  </div>
 					</div>
