Add site title, list form, event detailed view + data

--- a/hacktues/main/static/main/css/style.css
+++ b/hacktues/main/static/main/css/style.css
@@ -3,7 +3,9 @@ body {
     font-size: 18px;
     z-index: -1;
 }
-
+input[type=checkbox] {
+    display:block;
+}
 div.container h3 {
     margin-top: 0;
 }
