--- a/hacktues/main/templates/main/room_user.html
+++ b/hacktues/main/templates/main/room_user.html
@@ -18,7 +18,7 @@
 							</p>
 						</div>
 						<div class="card-action">
-						  <a class="grey-text" href="#">Изпрати списък</a>
+						  <a class="grey-text" href="{% url 'main-new_list'%}">Изпрати списък</a>
 						</div>
 					  </div>
 					</div>
