Add events and room view

--- a/hacktues/main/templates/main/create_room.html
+++ b/hacktues/main/templates/main/create_room.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
-{% block content%}
+{% block content %}
 <div class="container">
     <ul class="nav">
-        <li><a href='{% url "main-volunteer_profile"%}'>Върни се обратно към профила си</a></li>
+        <li><a href='{% url "main-user-profile"%}'>Върни се обратно към профила си</a></li>
     </ul>
     <div class="centered">
         <form action="{% url 'main-create-room' %}" method="POST">
