--- a/hacktues/main/templates/main/create_event.html
+++ b/hacktues/main/templates/main/create_event.html
@@ -1,21 +1,13 @@
 {% extends 'base.html' %} {% block content%}
 <div class="container">
     <ul class="nav">
-        <li><a href='{% url "main-volunteer_profile"%}'>Върни се обратно към профила си</a></li>
+        <li><a href='{% url "main-user-profile"%}'>Върни се обратно към профила си</a></li>
     </ul>
     <div class="centered">
-        <form>
-            <label for="eventName">Име за събитието</label></br>
-            <input type="text" id="eventName"></br>
-            <label for="eventType">Изберете типа на събитието:</label></br>
-            <select name="eventType" id="eventType">
-                    <option value="food">Храна</option>
-                    <option value="medicine">Лекарства</option>
-                </select>
-            </br>
-            <label for="eventDesc">Описание на събитието:</label></br>
-            <input type="text" class="bigBox" id="eventDesc">
-            <input type="submit" value="Заяви събитие">
+        <form action="{% url 'main-create-event' room_id=room_id %}" method="POST">
+            {% csrf_token %}
+            {{ form }}
+            <button type="submit">Submit</button>
         </form>
     </div>
 </div>
